portfolio display corrected after adding gap to grid

--- a/sad/src/main/resources/css/portfolio.css
+++ b/sad/src/main/resources/css/portfolio.css
@@ -14,7 +14,7 @@ table {
 	color: whitesmoke;
 	background-color: rgba(0, 0, 0, 25%);
 	border-radius: var(--bRadius);
-	grid-column: 1 / span 2;
+	grid-column: 1 / -1;
 
 	grid-row: 2 /3;
 }
